<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TodoList</string>
    <string name="action_settings">Settings</string>
    <string name="save">Save</string>
    <string name="archive">UnArch/Archive</string>
    <string name="delete">Delete</string>
    <string name="email">Email</string>
    <string name="todoview">ToDo</string>
    <string name="archived">Archived</string>
    <string name="sendEmail">Send</string>
    <string name="to">To</string>
    <string name="title_activity_email">SendEmail</string>
    <string name="summary">Summary</string>
    <string name="text">text</string>
    <string name="sample">New</string>
    <string name="title_activity_summary">Summary</string>
    <string name="hello_world">Hello world!</string>

</resources>