<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.todolist.MainActivity" 
    android:orientation="vertical" > 
    
    <TextView
        android:id="@+id/Field"
        android:layout_width = "fill_parent"
        android:layout_height = "wrap_content"
        android:text = "Text Field" />
    
    <ListView
        android:id="@+id/todoListView"
        android:layout_width="fill_parent"
        android:layout_height="263dp"
        android:layout_weight="1"
        android:scrollbars="vertical" >

    </ListView>
    
    <Button
        android:id="@+id/archive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="archive"
        android:text="@string/archive" />
    
    
    <LinearLayout
        android:id="@+id/input1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    
    <EditText
        android:id="@+id/body"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:scrollbars="horizontal" 
        android:hint="@string/sample"/>
    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:onClick="save" />
    
 	</LinearLayout>

    <LinearLayout
        android:id="@+id/input2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

    <Button
        android:id="@+id/delete"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:onClick="delete"
        android:text="@string/delete" />
    <Button
        android:id="@+id/email"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:onClick="email"
        android:text="@string/email" />
    
    </LinearLayout>
    
    
    <Button
      	android:id="@+id/todoview"
      	android:layout_width="match_parent"
      	android:layout_height="wrap_content"
      	android:onClick="todoview"
      	android:text="@string/todoview" />


    <Button
        android:id="@+id/archived"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/archived"
        android:onClick="archived" />    
    <Button
        android:id="@+id/summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/summary"
        android:onClick="summary" />     
    
   
        	
</LinearLayout>
